--- a/main.css
+++ b/main.css
@@ -1,195 +1,34 @@
-*{
-  text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
 }
 
-#main {
-  display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-areas: "header header" "meio meio" "footer footer";
-}
-
-#nf {
-  display: none;
-}
-
-#list {
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.alert-cookie {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
-  color: #eee;
-  width: 100%;
-  padding: 1em;
-  box-sizing: border-box;
-  z-index: 10;
-}
-
-.alert-cookie p {
-  width: 75%;
-  display: inline-block;
-}
-
-.alert-cookie button {
-  display: inline;
-  opacity: 1;
-  background: #34ace0;
-  border-radius: 4px;
-  box-shadow: #227093 1px 1px 0 2px;
-  color: #fff;
-  cursor: pointer;
-  padding: .7em 1em;
+hr {
   border: none;
 }
 
-.alert-cookie button:hover {
-  box-shadow: #227093 1px 1px 0 0;
-}
-
-.header {
-  background: #fff;
-  color: #333;
-  width: auto;
-  overflow: hidden;
-  font-family: monospace;
-  grid-area:header;
-  padding: 0 1em;
-}
-
-.header h1 {
-  border-top: solid 2px #222;
-  padding: 14px 0;
-  margin-bottom: 0;
-  text-align: center;
-  border-bottom: solid 2px #222;
-}
-.logo-cl {
-  color: #888;
-}
-/**/
-.nav {
-  display: flex;
-  overflow-y: hidden;
-  overflow-x: scroll;
-}
-
-.header .nav a {
-  margin: 0;
-  word-wrap: break-word;
-  white-space: nowrap;
-  font-family: 'Nunito', sans-serif;
-  color: #000;
-  padding: .6em 1.2em;
-  padding-left: 0;
-  border-bottom: solid 2px #888;
-}
-
-.header .nav a:hover, .header .nav a:active, .header .nav a.act {
-  color: #3498db;
-  font-weight: bold;
-}
-/**/
-.cont {
-  grid-area: meio;
-}
-
-.cont form {
-  margin: 1em 0;
-  width: auto;
-  text-align: center;
-}
-
-.cont form input {
-  width: 90%;
-  outline: 0;
-  box-sizing: border-box;
-  margin: 0 1em;
-  padding: 1em;
-  border-radius: 50px;
-  border: solid 1px #202124;
-}
-
-.cont form input::-webkit-input-placeholder {
-  color: #222;
-}
-
-.art {
-  border-radius: 10px;
-  position: relative;
-  border: solid 1px #eee;
-  width: auto;
-  height: auto;
-  margin: 1em;
-  box-shadow: #eee 1px 1px 10px 2px;
-  padding: .6em 1em;
-}
-
-.art img {
+img {
   width: 100%;
-  box-sizing: border-box;
-  border: solid 1px #eee;
-  padding: 4px;
-  border-radius: 10px;
-  overflow: hidden;
-  height: auto;
 }
 
-.art h1 {
-  color: #222;
-  font-family: 'Nunito', sans-serif;
+a {
+  background-color: transparent;
+  text-decoration: none;
+  color: #3F51B5
 }
 
-.art p {
-  color: #000;
-}
-
-.art time {
+/**/
+.alert-cookie {
   position: absolute;
-  bottom: 0;
-  color: #f93;
-  right: 0;
-  padding: 1em;
-}
-/**/
-.footer {
-  background: #fff;
-  grid-area: footer;
-  padding: 0 4%;
 }
 
-.footer p {
-  color: #000;
-  text-align: center;
-}
-
-.footer-c {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between
-}
-
-.footer-c a {
-  color: #f93;
-}
-/**/
 .loader {
   margin: auto;
   border: 10px solid #f93;
@@ -201,7 +40,139 @@ body {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
+
 /**/
+.header {
+  position: relative;
+  /*margin-bottom: 4.8em;*/
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0 2.5rem;
+  width: 100%;
+  /*background: #3F51B5;*/
+  z-index: 10;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 0 10px 7px;
+}
+
+.c-navigation__item {
+  position: relative;
+  display: inline-block;
+  padding: 1.8em 0;
+  font-family: arial, 'Roboto Mono', monospace;
+  font-weight: 700;
+  line-height: 1;
+  font-size: 14px;
+  color: #000;
+  text-transform: uppercase;
+}
+
+.c-navigation__item:not(:last-of-type) {
+  margin-right: 2.5rem
+}
+
+.c-navigation__item:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: transparent;
+  transition: background ease-in-out .2s;
+}
+
+.c-navigation__item:hover::after,
+.is-active:after {
+  background: #000;
+}
+.cc {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.banner {
+  text-align: center;
+}
+.banner h1 {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
+  line-height: 1.5;
+  font-size: 2em;
+  text-align: center;
+  color: #000;
+}
+
+.banner h1:after {
+  margin-left: .5rem;
+  color: rgba(0, 0, 0, 0.5);
+  content: '¬';
+  font-weight: 800;
+}
+
+.banner span {
+  color: #999;
+  text-align: center;
+}
+.c-article__main {
+  max-width: 76rem;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 1rem 2.5rem 2rem 2.5rem;
+  line-height: 1.4;
+  font-size: 14px;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about img {
+  width: 5em;
+  height: 5em;
+  border-radius: 100%;
+}
+
+.about p {
+  padding: 0 4em;
+  font-size: 10px;
+  line-height: 15px;
+}
+
+.c-article__main>* {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  width: 100%;
+  background: #fff;
+}
+
+.footer i {
+  color: #000;
+  font-size: 1.5em;
+  padding: .5em;
+}
+
+.footer i:hover {
+  color: #4285F4;
+}
