refactor(css): clean

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,12 +1,12 @@
-.font-size-sm {
+.font-sm {
   font-size: 2rem;
 }
 
-.font-size-md {
+.font-md {
   font-size: 3rem;
 }
 
-.font-size-xd {
+.font-lg {
   font-size: 4rem;
 }
 
