--- a/assets/css/state.css
+++ b/assets/css/state.css
@@ -5,6 +5,10 @@
   }
 }
 
+.githubCorner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
 @media (max-width:500px) {
   .githubCorner:hover .octo-arm {
     animation: none
