--- a/assets/css/module.css
+++ b/assets/css/module.css
@@ -1,10 +1,11 @@
 .githubCorner {
-  color: #fff;
   fill: var(--principle-color);
   position: absolute;
   top: 0;
   border: 0;
   right: 0;
+  z-index: 22;
+  cursor: pointer;
 }
 
 /* .loading {
@@ -18,6 +19,7 @@
 } */
 
 .about {
+  margin-top: 1em;
   position: relative;
   justify-content: center;
   align-items: center;
@@ -34,12 +36,11 @@
 
 .about__image {
   width: 200px;
-  border: solid 4px #fff;
+  border: solid 4px;
   border-radius: 50%;
 }
 
 .about__title {
-  color: #333;
   margin-top: .4em;
   margin-bottom: 5px;
   font-family: 'Dancing Script', cursive;
@@ -64,8 +65,8 @@
   height: 200px;
   overflow: hidden;
   margin: 20px 0;
-  border: solid 1px #b2b2b2;
-  border-radius:4px;
+  border: solid 1px none;
+  border-radius: 4px;
 }
 
 .about__item .about__title {
@@ -73,9 +74,7 @@
   width: 100%;
   text-align: center;
   padding: 4px;
-  color: #eee;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .5)
 }
 
 .footer {
